--- a/unauthenticated/templates/index.html
+++ b/unauthenticated/templates/index.html
@@ -49,10 +49,12 @@
     <body>
         <div class="container-fluid">
             $main_menu
-            <ul id="tabs-control" class="nav nav-tabs" role="tablist">
+            <ul id="tabs-plus" class="nav nav-tabs" role="tablist">
                 <li role="presentation">
                     <a id="new-tab"><i class="fa fa-plus"></i></a>
                 </li>
+            </ul>
+            <ul id="tabs-control" class="nav nav-tabs" role="tablist">
             </ul>
             <div id="filemin-tree" class="filemin-tree pull-left" style="width: 240px;">
                 <div class="tree"></div>
