--- a/unauthenticated/templates/context_menu.html
+++ b/unauthenticated/templates/context_menu.html
@@ -69,6 +69,9 @@
             <li data-item="chown_selected">
                 <a><i class="fa fa-users" aria-hidden="true"></i> $text{'chown_selected'}</a>
             </li>
+            <li data-item="chcon_selected">
+                <a><i class="fa fa-user-secret" aria-hidden="true"></i> $text{'chcon_selected'}</a>
+            </li>
             <li data-item="compress_selected">
                 <a><i class="fa fa-file-archive-o" aria-hidden="true"></i> $text{'compress_selected'}</a>
             </li>
