--- a/unauthenticated/templates/context_menu_search.html
+++ b/unauthenticated/templates/context_menu_search.html
@@ -46,6 +46,9 @@
             <li data-item="chown_selected">
                 <a><i class="fa fa-users" aria-hidden="true"></i> $text{'chown_selected'}</a>
             </li>
+            <li data-item="chcon_selected">
+                <a><i class="fa fa-user-secret" aria-hidden="true"></i> $text{'chcon_selected'}</a>
+            </li>
         </ul>
     </li>
 </ul>
