--- a/unauthenticated/templates/main_menu.html
+++ b/unauthenticated/templates/main_menu.html
@@ -58,6 +58,9 @@
                     <li>
                         <a data-item="chown_selected"><i class="fa fa-users"></i> $text{'chown_selected'}</a>
                     </li>
+                    <li data-item="chcon_selected">
+                        <a data-item="chcon_selected"><i class="fa fa-user-secret"></i> $text{'chcon_selected'}</a>
+                    </li>
                     <li>
                         <a data-item="compress_selected"><i class="fa fa-file-archive-o"></i> $text{'compress_selected'}</a>
                     </li>
