Added "View Buffer" functionality

--- a/unauthenticated/templates/context_menu.html
+++ b/unauthenticated/templates/context_menu.html
@@ -41,6 +41,9 @@
             <li data-item="symlink">
                 <a><i class="fa fa-link"></i> $text{'paste_symlink'}</a>
             </li>
+            <li data-item="view-buffer">
+                <a><i class="fa fa-eye"></i> $text{'menu_view'}</a>
+            </li>
         </ul>
     </li>
     <li class="dropdown-submenu">
