--- a/unauthenticated/templates/context_menu_search.html
+++ b/unauthenticated/templates/context_menu_search.html
@@ -21,6 +21,9 @@
             <li data-item="cut_selected">
                 <a><i class="fa fa-cut"></i> $text{'cut_selected'}</a>
             </li>
+            <li data-item="view-buffer">
+                <a><i class="fa fa-eye"></i> $text{'menu_view'}</a>
+            </li>
         </ul>
     </li>
     <li class="dropdown-submenu">
