--- a/unauthenticated/templates/main_menu.html
+++ b/unauthenticated/templates/main_menu.html
@@ -42,6 +42,9 @@
                     <li>
                         <a data-item="symlink"><i class="fa fa-link"></i> $text{'paste_symlink'}</a>
                     </li>
+                    <li>
+                        <a data-item="view-buffer"><i class="fa fa-eye"></i> $text{'menu_view'}</a>
+                    </li>
                 </ul>
             </li>
             <li>
