--- a/unauthenticated/templates/main_menu.html
+++ b/unauthenticated/templates/main_menu.html
@@ -40,6 +40,9 @@
                         <a data-item="paste"><i class="fa fa-paste"></i> $text{'paste'}</a>
                     </li>
                     <li>
+                        <a data-item="paste-overwriting"><i class="fa fa-exclamation-triangle"></i> $text{'paste_overwriting'}</a>
+                    </li>
+                    <li>
                         <a data-item="symlink"><i class="fa fa-link"></i> $text{'paste_symlink'}</a>
                     </li>
                     <li>
