--- a/unauthenticated/templates/context_menu.html
+++ b/unauthenticated/templates/context_menu.html
@@ -38,6 +38,9 @@
             <li data-item="paste">
                 <a><i class="fa fa-paste"></i> $text{'paste'}</a>
             </li>
+            <li data-item="paste-overwriting">
+                <a><i class="fa fa-exclamation-triangle"></i> $text{'paste_overwriting'}</a>
+            </li>
             <li data-item="symlink">
                 <a><i class="fa fa-link"></i> $text{'paste_symlink'}</a>
             </li>
